# vigine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGLM.cmake
example/: CMakeLists.txt  main.cpp
include/vigine/: abstractservice.h  abstractstate.h  abstractstatus.h  abstracttask.h  abstracttaskflow.h  entity.h  result.h  statemachine.h  vigine.h
include/vigine/component/: componentmanager.h  rendercomponent.h
include/vigine/ecs/: abstractcomponent.h  abstractentity.h  abstractsystem.h
include/vigine/system/: rendersystem.h
src/: entity.cpp  result.cpp  statemachine.cpp  vigine.cpp
src/component/: componentmanager.cpp  rendercomponent.cpp
src/system/: rendersystem.cpp
test/: CMakeLists.txt  EntityTest.cpp  concepts.h  test_vigine.cpp
test/architecture/: AbstractComponentTest.cpp  AbstractServiceTest.cpp  AbstractStateTest.cpp  AbstractStatusTest.cpp  AbstractSystemTest.cpp  AbstractTaskFlowTest.cpp  AbstractTaskTest.cpp  ArchitectureTest.cpp  EngineTest.cpp  StateMachineTest.cpp  VigineTest.cpp  concepts.h
test/architecture/ecs/: AbstractComponentTest.cpp  AbstractEntityTest.cpp  AbstractSystemTest.cpp
test/component/: ComponentManagerTest.cpp
